objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hobby__c</fullName>
        <label>Hobby</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hopscotch_count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to update the release count from Hopscotch custom settings</description>
        <label>Hopscotch count</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Host_ID__c</fullName>
        <label>Host ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Status__c</fullName>
        <label>Household Status</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Households__c</fullName>
        <label>Households</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IC_AMS_RF_Preferred_Vendor__c</fullName>
        <label>IC - AMS/RF - Preferred Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IC_AMS_RF_Proficiency__c</fullName>
        <label>IC - AMS/RF - Proficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IC_CIC_Layout_Preferred_Vendor__c</fullName>
        <label>IC - CIC Layout - Preferred Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IC_CIC_Layout_Proficiency__c</fullName>
        <label>IC - CIC Layout - Proficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IC_Physical_Verification_Preferred_V__c</fullName>
        <label>IC - Physical Verification - Preferred V</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IC_Physical_Verification_Proficiency__c</fullName>
        <label>IC - Physical Verification - Proficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IC_Place_Route_Preferred_Vendor__c</fullName>
        <label>IC - Place &amp; Route - Preferred Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IC_Place_Route_Proficiency__c</fullName>
        <label>IC - Place &amp; Route - Proficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IC_Synthesis_Preferred_Vendor__c</fullName>
        <label>IC - Synthesis - Preferred Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IC_Synthesis_Proficiency__c</fullName>
        <label>IC - Synthesis - Proficiency</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <label>Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Indirect_Partner_Name__c</fullName>
        <label>Indirect Partner Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avionics, marine, military electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers, Systems &amp; Peripherals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controls, test &amp; medical equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic manufacturing services (EMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package design foundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semiconductor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic/Research</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initiate_Change_Login__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Initiate Change Login</description>
        <label>Initiate Change Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Id__c</fullName>
        <label>Integration Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Country_Code__c</fullName>
        <label>International Country Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invalid_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invalid Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Password_Count__c</fullName>
        <label>Invalid Password Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Comments__c</fullName>
        <label>Invoice Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Class__c</fullName>
        <label>Job Class</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <picklist>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vice President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP of Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---Manager---</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom IC Design and Layout Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom IC Design and Verification Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFM Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Physical Design Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Signoff and Analysis Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Embedded Software Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Verification Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC Package Design Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logic Design Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCB Design Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RET Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Verification Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System-level Design Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>---Engineer---</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom IC Design and Layout Engineer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <picklist>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Technical Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Vice President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sys Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vice President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professor/Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kanji_Account_Name__c</fullName>
        <formula>Account.Kanji_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kanji Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanji_Address_1__c</fullName>
        <label>Kanji Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanji_Address_2__c</fullName>
        <label>Kanji Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanji_Address_3__c</fullName>
        <label>Kanji Address 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanji_Contact_Division__c</fullName>
        <label>Kanji Contact Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanji_Name__c</fullName>
        <formula>Last_Name_Kanji__c + &apos; &apos; + First_Name_Kanji__c</formula>
        <label>Kanji Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanji_Site_Address__c</fullName>
        <label>Kanji Site Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanji_Site_City__c</fullName>
        <label>Kanji Site City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanji_Site_Division_3__c</fullName>
        <label>Kanji Site Division 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_Admin_Approval_Date__c</fullName>
        <label>LMS Admin Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LMS_Approved_By__c</fullName>
        <label>LMS Approved By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LMS Registered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMS_Registration_Date__c</fullName>
        <label>LMS Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Login_Time__c</fullName>
        <label>Last Login Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Meeting__c</fullName>
        <label>Last Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name_Kanji__c</fullName>
        <label>Last Name Kanji</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Days_Count__c</fullName>
        <formula>DBE_Expiration_Date__c -  TODAY()</formula>
        <label>Live Days Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Login_Name__c</fullName>
        <externalId>true</externalId>
        <label>Login Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Password__c</fullName>
        <label>Login Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_F__c</fullName>
        <label>M/F</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mail_Stop__c</fullName>
        <label>Mail Stop</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingAddress__c</fullName>
        <formula>IF(ISBLANK(MailingStreet),&apos;&apos;, MailingStreet) 
&amp; 
IF(ISBLANK(MailingCity),&apos;&apos;, &apos;,&apos; &amp; MailingCity) 
&amp; 
IF(ISBLANK(MailingState),&apos;&apos;, &apos;,&apos; &amp; MailingState) 
&amp; 
IF(ISBLANK(MailingPostalCode),&apos;&apos;, &apos;,&apos; &amp; MailingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MailingAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_First_Name__c</fullName>
        <label>Manager First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Last_Name__c</fullName>
        <label>Manager Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Manager for</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Address__c</fullName>
        <label>Marketing Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Email__c</fullName>
        <label>Marketing Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mass_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merge_Sequence_Number__c</fullName>
        <label>Merge Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merge__c</fullName>
        <formula>HYPERLINK(&quot;apex/dupe_eliminator__SearchMerge?find=true&amp;object=Contact&amp;field1=LastName&amp;op1=contains&amp;value1=&quot;+LastName+&quot;&amp;field2=FirstName&amp;op2=contains&amp;value2=&quot;+FirstName+&quot;&amp;field3=Email&amp;op3=equals&amp;value3=&quot;+Email+&quot;&amp;limit=15&amp;hideFilter=0&amp;hideHeader=0&amp;hideSidebar=1&quot; , IMAGE (&quot;/resource/Merge_Button_Image&quot;, &quot;Merge&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration__c</fullName>
        <label>Migration</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multi_Site_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi-Site Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Never_Call_Again__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Never Call Again</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Never_Email_Again__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Never Email Again</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Never_Email_offers_Again_CDN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Never Email Offers Again CDN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Login_Name__c</fullName>
        <label>New Login Name</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>No_Domain_Expiration_Mail_Formula__c</fullName>
        <formula>Parent_Account__r.No_Domain_Expiration_Mail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No Domain Expiration Mail ( Account )</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Domain_Expiration_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restrict DBE Expiration Notification Email</description>
        <inlineHelpText>Restrict DBE Expiration Notification Email</inlineHelpText>
        <label>No Domain Expiration Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_S_Version__c</fullName>
        <label>O/S Version</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Okta_Cookie_Token__c</fullName>
        <externalId>true</externalId>
        <label>Okta Cookie Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Okta_Id__c</fullName>
        <label>Okta Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Okta_OTP__c</fullName>
        <label>Okta OTP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contact_Comment__c</fullName>
        <label>Opportunity Contact Comment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contact_Commente__c</fullName>
        <label>Opportunity Contact Comment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Status__c</fullName>
        <label>Org Status</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <label>Organization Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Email__c</fullName>
        <externalId>true</externalId>
        <label>Original Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PIM_Current_User_Sync_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PIM Current User Sync Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PIM_Sync_Owner__c</fullName>
        <label>PIM Sync Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pager_Number__c</fullName>
        <label>Pager Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Name__c</fullName>
        <description>This field is used to show the Parent Account Name. Used on email Template.</description>
        <formula>Parent_Account__r.Name</formula>
        <inlineHelpText>Parent Account Name</inlineHelpText>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Type__c</fullName>
        <formula>Text(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Account, Partner-Parent Account</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward,UnifiedSSO Profile</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Parent)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_DBE_Flag__c</fullName>
        <formula>Parent_Account__r.DBE_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent DBE Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_HQ_DUNS__c</fullName>
        <label>Parent HQ DUNS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partnership_Contact_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partnership Contact Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partnership_Key_Contact_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partnership Key Contact Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Party_Type_Code__c</fullName>
        <label>Party Type Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_UID__c</fullName>
        <label>Party UID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_City__c</fullName>
        <label>Personal City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Country__c</fullName>
        <label>Personal Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Kanji_Address_1__c</fullName>
        <label>Personal Kanji Address 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Kanji_Address_2__c</fullName>
        <label>Personal Kanji Address 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Kanji_Address_3__c</fullName>
        <label>Personal Kanji Address 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Postal_Code__c</fullName>
        <label>Personal Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_State__c</fullName>
        <label>Personal State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Street_Address_2__c</fullName>
        <label>Personal Street Address 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Street_Address__c</fullName>
        <label>Personal Street Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_UID__c</fullName>
        <label>Personal UID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Win__c</fullName>
        <label>Personal Win</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personality__c</fullName>
        <label>Personality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pin__c</fullName>
        <formula>&apos;Pin Formula&apos;</formula>
        <label>Pin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Allegro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DFM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encounter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incisive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtuoso</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Political_Strategy__c</fullName>
        <label>Political Strategy</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Communications__c</fullName>
        <label>Preferred Communications</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Language_Code__c</fullName>
        <label>Preferred Language Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_City__c</fullName>
        <label>Primary City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Country__c</fullName>
        <label>Primary Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_End_Market_Value__c</fullName>
        <label>Primary End Market</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avionics, marine, military electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication systems (wired / wireline)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers, systems, &amp; peripherals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controls, test, &amp; medical equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic manufacturing services (EMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package design foundry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semiconductor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_End_Market__c</fullName>
        <label>Primary End Market</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Postal_Code__c</fullName>
        <label>Primary Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_State__c</fullName>
        <label>Primary State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Street_Address__c</fullName>
        <label>Primary Street Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>